# c-autograd

./: CMakeLists.txt  GRAMMAR.md  README.md  input.txt  lexer.c  lexer.h  main.c  main.md  operations.c  operations.h  optimizer.c  optimizer.h  parser.c  parser.h
include/: lexer.h  node.h  node_list.h  operations.h  optimizer.h  parser.h  tree_iter.h  utils.h
src/: lexer.c  main.c  node.c  node_list.c  operations.c  optimizer.c  parser.c  tree_iter.c  utils.c
